--- a/red_button/index.html
+++ b/red_button/index.html
@@ -44,6 +44,7 @@
             </div>
         </section>
         <section id="how" class="how">
+            <img src="./img/how_bg.jpg"class="how__bg">
             <div class="container">
                 <div class="section__header-wrap">
                     <h2 class="section__header">Как это работает?</h2>
@@ -83,6 +84,212 @@
                         </div>
                         <h3 class="item__header">Разблокировка сервиса</h3>
                         <p class="item__text">Когда тревога закончится, вы или мы разблокируем все обратно по заранее согласованному индивидуальному сценарию.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="why">
+            <div class="container">
+                <div class="section__header-wrap">
+                    <h2 class="section__header">Почему это точно сработает?</h2>
+                    <h3 class="section__subheader">Мы продумали все до мелочей!</h3>
+                </div>
+                <div class="why__items">
+                    <div class="item item_why">
+                        <div class="item__ico item__ico_why">
+                            <img src="./img/why1.png" alt="Иконка" class="item__img item__img_why">
+                        </div>
+                        <h3 class="item__header item__header_mw">Заглянули неожиданные гости</h3>
+                    </div>
+                    <div class="item item_why">
+                        <div class="item__ico item__ico_why">
+                            <img src="./img/why2.png" alt="Иконка" class="item__img item__img_why">
+                        </div>
+                        <h3 class="item__header item__header_mw">Отключение электричества</h3>
+                    </div>
+                    <div class="item item_why">
+                        <div class="item__ico item__ico_why">
+                            <img src="./img/why3.png" alt="Иконка" class="item__img item__img_why">
+                        </div>
+                        <h3 class="item__header item__header_mw">Нет связи с интернетом или GSM глушилка</h3>
+                    </div>
+                    <div class="item item_why">
+                        <div class="item__ico item__ico_why">
+                            <img src="./img/why4.png" alt="Иконка" class="item__img item__img_why">
+                        </div>
+                        <h3 class="item__header item__header_mw">Авто- или ручная активация тревоги</h3>
+                    </div>
+                    <div class="item item_why">
+                        <div class="item__ico item__ico_why">
+                            <img src="./img/why5.png" alt="Иконка" class="item__img item__img_why">
+                        </div>
+                        <h3 class="item__header item__header_mw">Задействовано много сотрудников</h3>
+                    </div>
+                    <div class="item item_why">
+                        <div class="item__ico item__ico_why">
+                            <img src="./img/why6.png" alt="Иконка" class="item__img item__img_why">
+                        </div>
+                        <h3 class="item__header item__header_mw">Настройки и уровень паранойи</h3>
+                    </div>
+                    <div class="item item_why">
+                        <div class="item__ico item__ico_why">
+                            <img src="./img/why7.png" alt="Иконка" class="item__img item__img_why">
+                        </div>
+                        <h3 class="item__header item__header_mw">Индивидуальные решения</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="agit">
+            <img class="agit__person" src="./img/person_like.png">
+            <div class="container">
+                <h2 class="agit__header"><b>Сохрани безопасность данных,</b> подключив "Красную кнопку"!</h2>
+                <button class="button button__agit">Подключить красную кнопку!</button>
+            </div>
+        </section>
+        <section id="about" class="about">
+            <div class="container">
+                <div class="section__header-wrap">
+                    <h2 class="section__header">О нас и сервисе</h2>
+                </div>
+                <div class="about__items">
+                    <div class="item">
+                        <div class="item__ico">
+                            <img src="" alt="" class="item__img">
+                        </div>
+                        <h3 class="item__header">Мы - параноики со стажем</h3>
+                        <p class="item__text">Часть нашей команды  раньше работала в службах, где заставляли давить и делать план. Другая часть команды выросла из бизнеса, где сталкивалась с тем же незаконным давлением и произволом.</p>
+                    </div>
+                    <div class="item">
+                        <div class="item__ico">
+                            <img src="" alt="" class="item__img">
+                        </div>
+                        <h3 class="item__header">Знаем как законно защитить бизнес!</h3>
+                        <p class="item__text">Мы понимаем важность сервиса, который позволит вам законно защитить ваш бизнес в самый критичный момент. Все детали и  опасности уже продуманы и предусмотрены, нужные мониторинги настроены.</p>
+                    </div>
+                    <div class="item">
+                        <div class="item__ico">
+                            <img src="" alt="" class="item__img">
+                        </div>
+                        <h3 class="item__header">Сервис блокирует доступ при угрозе</h3>
+                        <p class="item__text">Главная угроза бизнесу - если к вашей бухгалтерии, почте, документам, рабочим столам получат доступ некоторые лица. Ваша информация является главной ценностью и одновременно оружием против вас.</p>
+                    </div>
+                    <div class="item">
+                        <div class="item__ico">
+                            <img src="" alt="" class="item__img">
+                        </div>
+                        <h3 class="item__header">А если вдруг узнают про красную кнопку?</h3>
+                        <h3 class="item__header">А если придут к нам и попросят разблокировать?</h3>
+                        <a href="#" class="item__more">Подробнее</a>
+                    </div>
+                </div>
+                <div class="section__wrapper">
+                    <p class="about__text">Если вам нужна более подробная информация по этому вопросу, свяжитесь с нами и мы все обсудим. Также мы можем предложить вам защищенные серверы, облака и виртуальные рабочие столы с размещением в Чехии.</p>
+                    <div class="button__wrap">
+                        <button class="button button__about">Связатсья с нами!</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="price" class="price">
+            <div class="container">
+                <div class="section__header-wrap">
+                    <h2 class="section__header">О нас и сервисе</h2>
+                    <p class="price__text">Выберите нужное количество смартфонов и услуг.</p>
+                    <p class="price__text">Вы можете использовать любое количество смартфонов.</p>
+                </div>
+                <div class="section__wrapper">
+                    <div class="price__pricelist">
+                        <table class="table" cellspacing='0'>
+                            <tr>
+                                <th>Что включено в тариф</th>
+                                <th>"Красная кнопка"</th>
+                                <th>"Один телефон"</th>
+                                <th>"Два телефона"</th>
+                            </tr>
+                            <tr>
+                                <td>Ручная красная кнопка</td>
+                                <td class="table__yes"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                            </tr>
+                            <tr>
+                                <td>Автоматическая кнопка</td>
+                                <td class="table__no"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                            </tr>
+                            <tr>
+                                <td>Защита от глушилок, перепроверка звонком</td>
+                                <td class="table__no"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                            </tr>
+                            <tr>
+                                <td>API</td>
+                                <td class="table__yes"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                            </tr>
+                            <tr>
+                                <td>Выбор заставок</td>
+                                <td class="table__no"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__has-img">
+                                    <img src="./img/mail.png" alt="Иконка мфил.ру" class="table__ico">
+                                    <img src="./img/tg.png" alt="Иконка телеграм" class="table__ico">
+                                </td>
+                                <td class="table__yes"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                            </tr>
+                            <tr>
+                                <td>Sms</td>
+                                <td class="table__no"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                            </tr>
+                            <tr>
+                                <td>Звонок</td>
+                                <td class="table__no"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__has-img">
+                                    <img src="./img/wa.png" alt="Иконка вотсапп" class="table__ico">
+                                </td>
+                                <td class="table__no"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                                <td class="table__yes"><span></span></td>
+                            </tr>
+                        </table>
+                        <div class="button__wrap">
+                            <a href="#" class="table__link-inline">Посмотреть все различия</a>
+                        </div>
+                        <div class="table__prices">
+                            <span class="table__red">Цена:</span>
+                            <div class="table__cols">
+                                <div class="table__col">
+                                    <h3 class="table__col-header">5€</h3>
+                                    <span class="table__col-span">в месяц</span>
+                                    <button class="button button__in-table">Купить!</button>
+                                </div>
+                                <div class="table__col">
+                                    <h3 class="table__col-header">25€</h3>
+                                    <span class="table__col-span">в месяц</span>
+                                    <button class="button button__in-table">Купить!</button>
+                                </div>
+                                <div class="table__col">
+                                    <h3 class="table__col-header">40€</h3>
+                                    <span class="table__col-span">в месяц</span>
+                                    <button class="button button__in-table">Купить!</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
