--- a/red_button/index.html
+++ b/red_button/index.html
@@ -37,6 +37,9 @@
     </div>
     <main class="main">
         <section class="banner">
+            <img src="./img/banner_bg1.png" alt="" class="banner__bg1">
+            <img src="./img/banner_bg2.png" alt="" class="banner__bg2">
+            <!-- <img src="./img/banner_bg3.png" alt="" class="banner__bg3"> -->
             <div class="container">
                 <div class="banner__wrap">
                     <h1 class="section__header">Сохрани свой<br>бизнес и информацию!</h1>
@@ -72,21 +75,25 @@
                             <img src="./img/ico3.png" alt="Иконка" class="item__img">
                         </div>
                         <h3 class="item__header">Отключили электричество</h3>
-                        <p class="item__text">Если выключат электричество и интернет, грубо ворвутся в офис с глушилкой - тревога сработает автоматически.<span class="question">?</span><span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></p>
+                        <p class="item__text">Если выключат электричество и интернет, грубо ворвутся в офис с глушилкой - тревога сработает автоматически.<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></p>
                     </div>
                     <div class="item">
                         <div class="item__ico">
                             <img src="./img/ico4.png" alt="Иконка" class="item__img">
                         </div>
                         <h3 class="item__header">Блокировка по тревоге</h3>
-                        <p class="item__text">Немедленно блокируются интернет-порты к вашим серверам по тревоге в ЦОДе, что блокирует доступ к базе.<span class="question">?</span><span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></p>
+                        <p class="item__text">Немедленно блокируются интернет-порты к вашим серверам по тревоге в ЦОДе, что блокирует доступ к базе.<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></p>
                     </div>
                     <div class="item">
                         <div class="item__ico">
                             <img src="./img/ico5.png" alt="Иконка" class="item__img">
                         </div>
                         <h3 class="item__header">Разблокировка сервиса</h3>
-                        <p class="item__text">Когда тревога закончится, вы или мы разблокируем все обратно по заранее согласованному индивидуальному сценарию.<span class="question">?</span><span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></p>
+                        <p class="item__text">Когда тревога закончится, вы или мы разблокируем все обратно по заранее согласованному индивидуальному сценарию.<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></p>
+                    </div>
+                    <div class="how__tip">
+                        <!-- <img src="./img/tip_bg.png" class="how__tip-bg"> -->
+                        <p class="text__italic">Поддерживаются смартфоны на базе Android. Рекомендуем использовать телефоны Huawei - они стабильны и у них одни из лучших камер!</p>
                     </div>
                 </div>
             </div>
@@ -102,43 +109,43 @@
                         <div class="item__ico item__ico_why">
                             <img src="./img/why1.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Заглянули неожиданные гости<span class="question">?</span><span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></h3>
+                        <h3 class="item__header item__header_mw">Заглянули неожиданные гости<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                     <div class="item item_why">
                         <div class="item__ico item__ico_why">
                             <img src="./img/why2.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Отключение электричества<span class="question">?</span><span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></h3>
+                        <h3 class="item__header item__header_mw">Отключение электричества<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                     <div class="item item_why">
                         <div class="item__ico item__ico_why">
                             <img src="./img/why3.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Нет связи с интернетом или GSM глушилка<span class="question">?</span><span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></h3>
+                        <h3 class="item__header item__header_mw">Нет связи с интернетом или GSM глушилка<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                     <div class="item item_why">
                         <div class="item__ico item__ico_why">
                             <img src="./img/why4.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Авто- или ручная активация тревоги<span class="question">?</span><span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></h3>
+                        <h3 class="item__header item__header_mw">Авто- или ручная активация тревоги<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                     <div class="item item_why">
                         <div class="item__ico item__ico_why">
                             <img src="./img/why5.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Задействовано много сотрудников<span class="question">?</span><span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></h3>
+                        <h3 class="item__header item__header_mw">Задействовано много сотрудников<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                     <div class="item item_why">
                         <div class="item__ico item__ico_why">
                             <img src="./img/why6.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Настройки и уровень паранойи<span class="question">?</span><span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></h3>
+                        <h3 class="item__header item__header_mw">Настройки и уровень паранойи<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                     <div class="item item_why">
                         <div class="item__ico item__ico_why">
                             <img src="./img/why7.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Индивидуальные решения<span class="question">?</span><span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></h3>
+                        <h3 class="item__header item__header_mw">Индивидуальные решения<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                 </div>
             </div>
@@ -198,6 +205,7 @@
         </section>
         <section id="price" class="price">
             <img src="./img/price__bg1.jpg" class="price__bg">
+            <img src="./img/price__bg2.jpg" class="price__bg2">
             <div class="container">
                 <div class="section__header-wrap">
                     <h2 class="section__header">Сколько стоит?</h2>
