--- a/red_button/index.html
+++ b/red_button/index.html
@@ -75,21 +75,21 @@
                             <img src="./img/ico3.png" alt="Иконка" class="item__img">
                         </div>
                         <h3 class="item__header">Отключили электричество</h3>
-                        <p class="item__text">Если выключат электричество и интернет, грубо ворвутся в офис с глушилкой - тревога сработает автоматически.<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></p>
+                        <p class="item__text">Если выключат электричество и интернет, грубо ворвутся в офис с глушилкой - тревога сработает автоматически.<span class="question open_tip">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></p>
                     </div>
                     <div class="item">
                         <div class="item__ico">
                             <img src="./img/ico4.png" alt="Иконка" class="item__img">
                         </div>
                         <h3 class="item__header">Блокировка по тревоге</h3>
-                        <p class="item__text">Немедленно блокируются интернет-порты к вашим серверам по тревоге в ЦОДе, что блокирует доступ к базе.<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></p>
+                        <p class="item__text">Немедленно блокируются интернет-порты к вашим серверам по тревоге в ЦОДе, что блокирует доступ к базе.<span class="question open_tip">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></p>
                     </div>
                     <div class="item">
                         <div class="item__ico">
                             <img src="./img/ico5.png" alt="Иконка" class="item__img">
                         </div>
                         <h3 class="item__header">Разблокировка сервиса</h3>
-                        <p class="item__text">Когда тревога закончится, вы или мы разблокируем все обратно по заранее согласованному индивидуальному сценарию.<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></p>
+                        <p class="item__text">Когда тревога закончится, вы или мы разблокируем все обратно по заранее согласованному индивидуальному сценарию.<span class="question open_tip">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></p>
                     </div>
                     <div class="how__tip">
                         <!-- <img src="./img/tip_bg.png" class="how__tip-bg"> -->
@@ -109,43 +109,43 @@
                         <div class="item__ico item__ico_why">
                             <img src="./img/why1.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Заглянули неожиданные гости<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
+                        <h3 class="item__header item__header_mw">Заглянули неожиданные гости<span class="question open_tip">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                     <div class="item item_why">
                         <div class="item__ico item__ico_why">
                             <img src="./img/why2.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Отключение электричества<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
+                        <h3 class="item__header item__header_mw">Отключение электричества<span class="question open_tip">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                     <div class="item item_why">
                         <div class="item__ico item__ico_why">
                             <img src="./img/why3.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Нет связи с интернетом или GSM глушилка<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
+                        <h3 class="item__header item__header_mw">Нет связи с интернетом или GSM глушилка<span class="question open_tip">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                     <div class="item item_why">
                         <div class="item__ico item__ico_why">
                             <img src="./img/why4.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Авто- или ручная активация тревоги<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
+                        <h3 class="item__header item__header_mw">Авто- или ручная активация тревоги<span class="question open_tip">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                     <div class="item item_why">
                         <div class="item__ico item__ico_why">
                             <img src="./img/why5.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Задействовано много сотрудников<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
+                        <h3 class="item__header item__header_mw">Задействовано много сотрудников<span class="question open_tip">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                     <div class="item item_why">
                         <div class="item__ico item__ico_why">
                             <img src="./img/why6.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Настройки и уровень паранойи<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
+                        <h3 class="item__header item__header_mw">Настройки и уровень паранойи<span class="question open_tip">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                     <div class="item item_why">
                         <div class="item__ico item__ico_why">
                             <img src="./img/why7.png" alt="Иконка" class="item__img item__img_why">
                         </div>
-                        <h3 class="item__header item__header_mw">Индивидуальные решения<span class="question">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
+                        <h3 class="item__header item__header_mw">Индивидуальные решения<span class="question open_tip">?<span class="question__tip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat ducimus vero unde corporis porro. Quisquam modi non eum in animi.</span></span></h3>
                     </div>
                 </div>
             </div>
@@ -282,33 +282,33 @@
                                     <td class="table__yes"><span></span></td>
                                 </tr>
                             </table>
-                        </div>
-                        <div class="button__wrap">
-                            <a href="#" class="table__link-inline">Посмотреть все различия</a>
-                        </div>
-                        <div class="table__prices">
-                            <span class="table__red">Цена:</span>
-                            <div class="table__cols">
-                                <div class="table__col">
-                                    <div class="table__col-price">
-                                        <h3 class="table__col-header">5€</h3>
-                                        <span class="table__col-span">в месяц</span>
+                            <div class="button__wrap">
+                                <a href="#" class="table__link-inline">Посмотреть все различия</a>
+                            </div>
+                            <div class="table__prices">
+                                <span class="table__red">Цена:</span>
+                                <div class="table__cols">
+                                    <div class="table__col">
+                                        <div class="table__col-price">
+                                            <h3 class="table__col-header">5€</h3>
+                                            <span class="table__col-span">в месяц</span>
+                                        </div>
+                                        <button class="button button__in-table open_form">Купить!</button>
                                     </div>
-                                    <button class="button button__in-table open_form">Купить!</button>
-                                </div>
-                                <div class="table__col">
-                                    <div class="table__col-price">
-                                        <h3 class="table__col-header">25€</h3>
-                                        <span class="table__col-span">в месяц</span>
+                                    <div class="table__col">
+                                        <div class="table__col-price">
+                                            <h3 class="table__col-header">25€</h3>
+                                            <span class="table__col-span">в месяц</span>
+                                        </div>
+                                        <button class="button button__in-table open_form">Купить!</button>
                                     </div>
-                                    <button class="button button__in-table open_form">Купить!</button>
-                                </div>
-                                <div class="table__col">
-                                    <div class="table__col-price">
-                                        <h3 class="table__col-header">40€</h3>
-                                        <span class="table__col-span">в месяц</span>
+                                    <div class="table__col">
+                                        <div class="table__col-price">
+                                            <h3 class="table__col-header">40€</h3>
+                                            <span class="table__col-span">в месяц</span>
+                                        </div>
+                                        <button class="button button__in-table open_form">Купить!</button>
                                     </div>
-                                    <button class="button button__in-table open_form">Купить!</button>
                                 </div>
                             </div>
                         </div>
