--- a/verter_app/sixth.html
+++ b/verter_app/sixth.html
@@ -6,6 +6,7 @@
     <title>Verter</title>
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 <body class="body">
     <div class="global__wrapper">
@@ -52,7 +53,7 @@
                         </div>
                     </a>
                     <a href="#" class="table__row-link table__row-removelink remove_row">
-                        <div class="table__wrap table__wrap_sa">
+                        <div class="table__wrap table__wrap_sa center">
                             <div class="table__col table__col_nomw">
                                 <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
@@ -68,7 +69,7 @@
                         </div>
                     </a>
                     <a href="#" class="table__row-link table__row-removelink remove_row">
-                        <div class="table__wrap table__wrap_sa">
+                        <div class="table__wrap table__wrap_sa center">
                             <div class="table__col table__col_nomw">
                                 <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
@@ -84,7 +85,7 @@
                         </div>
                     </a>
                     <a href="#" class="table__row-link table__row-removelink remove_row">
-                        <div class="table__wrap table__wrap_sa">
+                        <div class="table__wrap table__wrap_sa center">
                             <div class="table__col table__col_nomw">
                                 <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
@@ -100,7 +101,7 @@
                         </div>
                     </a>
                     <a href="#" class="table__row-link table__row-removelink remove_row">
-                        <div class="table__wrap table__wrap_sa">
+                        <div class="table__wrap table__wrap_sa center">
                             <div class="table__col table__col_nomw">
                                 <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
@@ -116,7 +117,7 @@
                         </div>
                     </a>
                     <a href="#" class="table__row-link table__row-removelink remove_row">
-                        <div class="table__wrap table__wrap_sa">
+                        <div class="table__wrap table__wrap_sa center">
                             <div class="table__col table__col_nomw">
                                 <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
@@ -132,7 +133,7 @@
                         </div>
                     </a>
                     <a href="#" class="table__row-link table__row-removelink remove_row">
-                        <div class="table__wrap table__wrap_sa">
+                        <div class="table__wrap table__wrap_sa center">
                             <div class="table__col table__col_nomw">
                                 <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
@@ -148,7 +149,7 @@
                         </div>
                     </a>
                     <a href="#" class="table__row-link table__row-removelink remove_row">
-                        <div class="table__wrap table__wrap_sa">
+                        <div class="table__wrap table__wrap_sa center">
                             <div class="table__col table__col_nomw">
                                 <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
@@ -164,7 +165,7 @@
                         </div>
                     </a>
                     <a href="#" class="table__row-link table__row-removelink remove_row">
-                        <div class="table__wrap table__wrap_sa">
+                        <div class="table__wrap table__wrap_sa center">
                             <div class="table__col table__col_nomw">
                                 <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
