--- a/verter_app/fifth.html
+++ b/verter_app/fifth.html
@@ -6,6 +6,7 @@
     <title>Verter</title>
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 <body class="body">
     <div class="global__wrapper">
@@ -44,7 +45,7 @@
             </div>
             <div class="table">
                 <div class="table__row table__row_odd">
-                    <a href="./sixth.html" class="table__row-link">
+                    <a href="./sixth.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -56,9 +57,16 @@
                             </div>
                         </div>
                     </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="table__row table__row_even">
-                    <a href="./sixth.html" class="table__row-link">
+                    <a href="./sixth.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -67,12 +75,19 @@
                             <div class="table__col">
                                 <span class="table__col-count">32/2124</span>
                             </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="table__row table__row_odd">
-                    <a href="./sixth.html" class="table__row-link">
+                    <a href="./sixth.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -84,9 +99,16 @@
                             </div>
                         </div>
                     </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="table__row table__row_even">
-                    <a href="./sixth.html" class="table__row-link">
+                    <a href="./sixth.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -95,12 +117,19 @@
                             <div class="table__col">
                                 <span class="table__col-count">32/2124</span>
                             </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="table__row table__row_odd">
-                    <a href="./sixth.html" class="table__row-link">
+                    <a href="./sixth.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -112,9 +141,16 @@
                             </div>
                         </div>
                     </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="table__row table__row_even">
-                    <a href="./sixth.html" class="table__row-link">
+                    <a href="./sixth.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -123,12 +159,19 @@
                             <div class="table__col">
                                 <span class="table__col-count">32/2124</span>
                             </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="table__row table__row_odd">
-                    <a href="./sixth.html" class="table__row-link">
+                    <a href="./sixth.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -137,12 +180,19 @@
                             <div class="table__col">
                                 <span class="table__col-count">32/2124</span>
                             </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="table__row table__row_even">
-                    <a href="./sixth.html" class="table__row-link">
+                    <a href="./sixth.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -154,31 +204,10 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <div class="table__row table__row_odd">
-                    <a href="./sixth.html" class="table__row-link">
-                        <div class="container">
-                            <div class="table__wrap">
-                                <div class="table__col">
-                                <span class="table__col-span-big">EUR 47</span>
-                            </div>
-                            <div class="table__col">
-                                <span class="table__col-count">32/2124</span>
-                            </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="table__row table__row_even">
-                    <a href="./sixth.html" class="table__row-link">
-                        <div class="container">
-                            <div class="table__wrap">
-                                <div class="table__col">
-                                <span class="table__col-span-big">EUR 47</span>
-                            </div>
-                            <div class="table__col">
-                                <span class="table__col-count">32/2124</span>
-                            </div>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
                         </div>
                     </a>
