--- a/verter_app/fourth_err.html
+++ b/verter_app/fourth_err.html
@@ -6,6 +6,7 @@
     <title>Verter</title>
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 <body class="body">
     <div class="global__wrapper">
