--- a/verter_app/second.html
+++ b/verter_app/second.html
@@ -6,6 +6,7 @@
     <title>Verter</title>
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 <body class="body">
     <div class="global__wrapper">
@@ -59,7 +60,7 @@
                     </div>
                 </div>
                 <div class="table__row table__row_odd">
-                    <a href="./third.html" class="table__row-link">
+                    <a href="./third.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -76,9 +77,16 @@
                             </div>
                         </div>
                     </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="table__row table__row_even">
-                    <a href="./third.html" class="table__row-link">
+                    <a href="./third.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -92,12 +100,19 @@
                                 <div class="table__col">
                                     <span class="table__col-count">2238/3400</span>
                                 </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="table__row table__row_odd">
-                    <a href="./third.html" class="table__row-link">
+                    <a href="./third.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -114,9 +129,16 @@
                             </div>
                         </div>
                     </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="table__row table__row_even">
-                    <a href="./third.html" class="table__row-link">
+                    <a href="./third.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -130,12 +152,19 @@
                                 <div class="table__col">
                                     <span class="table__col-count">2238/3400</span>
                                 </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="table__row table__row_odd">
-                    <a href="./third.html" class="table__row-link">
+                    <a href="./third.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -152,9 +181,16 @@
                             </div>
                         </div>
                     </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="table__row table__row_even">
-                    <a href="./third.html" class="table__row-link">
+                    <a href="./third.html" class="table__row-link item__removable">
                         <div class="container">
                             <div class="table__wrap">
                                 <div class="table__col">
@@ -168,6 +204,169 @@
                                 <div class="table__col">
                                     <span class="table__col-count">2238/3400</span>
                                 </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="table__row table__row_odd">
+                    <a href="./third.html" class="table__row-link item__removable">
+                        <div class="container">
+                            <div class="table__wrap">
+                                <div class="table__col">
+                                    <span class="table__col-span-big">№ 118 081 200 122</span>
+                                    <span class="table__col-span">ООО “Вертер сенсорные технологии”</span>
+                                </div>
+                                <div class="table__col">
+                                    <span class="table__col-span-big">03.06.2020</span>
+                                    <span class="table__col-span-big">ТАЦУ-123 123 45</span>
+                                </div>
+                                <div class="table__col">
+                                    <span class="table__col-count">2238/3400</span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="table__row table__row_even">
+                    <a href="./third.html" class="table__row-link item__removable">
+                        <div class="container">
+                            <div class="table__wrap">
+                                <div class="table__col">
+                                    <span class="table__col-span-big">№ 118 081 200 122</span>
+                                    <span class="table__col-span">ООО “Вертер сенсорные технологии”</span>
+                                </div>
+                                <div class="table__col">
+                                    <span class="table__col-span-big">03.06.2020</span>
+                                    <span class="table__col-span-big">ТАЦУ-123 123 45</span>
+                                </div>
+                                <div class="table__col">
+                                    <span class="table__col-count">2238/3400</span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="table__row table__row_odd">
+                    <a href="./third.html" class="table__row-link item__removable">
+                        <div class="container">
+                            <div class="table__wrap">
+                                <div class="table__col">
+                                    <span class="table__col-span-big">№ 118 081 200 122</span>
+                                    <span class="table__col-span">ООО “Вертер сенсорные технологии”</span>
+                                </div>
+                                <div class="table__col">
+                                    <span class="table__col-span-big">03.06.2020</span>
+                                    <span class="table__col-span-big">ТАЦУ-123 123 45</span>
+                                </div>
+                                <div class="table__col">
+                                    <span class="table__col-count">2238/3400</span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="table__row table__row_even">
+                    <a href="./third.html" class="table__row-link item__removable">
+                        <div class="container">
+                            <div class="table__wrap">
+                                <div class="table__col">
+                                    <span class="table__col-span-big">№ 118 081 200 122</span>
+                                    <span class="table__col-span">ООО “Вертер сенсорные технологии”</span>
+                                </div>
+                                <div class="table__col">
+                                    <span class="table__col-span-big">03.06.2020</span>
+                                    <span class="table__col-span-big">ТАЦУ-123 123 45</span>
+                                </div>
+                                <div class="table__col">
+                                    <span class="table__col-count">2238/3400</span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="table__row table__row_odd">
+                    <a href="./third.html" class="table__row-link item__removable">
+                        <div class="container">
+                            <div class="table__wrap">
+                                <div class="table__col">
+                                    <span class="table__col-span-big">№ 118 081 200 122</span>
+                                    <span class="table__col-span">ООО “Вертер сенсорные технологии”</span>
+                                </div>
+                                <div class="table__col">
+                                    <span class="table__col-span-big">03.06.2020</span>
+                                    <span class="table__col-span-big">ТАЦУ-123 123 45</span>
+                                </div>
+                                <div class="table__col">
+                                    <span class="table__col-count">2238/3400</span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="table__row table__row_even">
+                    <a href="./third.html" class="table__row-link item__removable">
+                        <div class="container">
+                            <div class="table__wrap">
+                                <div class="table__col">
+                                    <span class="table__col-span-big">№ 118 081 200 122</span>
+                                    <span class="table__col-span">ООО “Вертер сенсорные технологии”</span>
+                                </div>
+                                <div class="table__col">
+                                    <span class="table__col-span-big">03.06.2020</span>
+                                    <span class="table__col-span-big">ТАЦУ-123 123 45</span>
+                                </div>
+                                <div class="table__col">
+                                    <span class="table__col-count">2238/3400</span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="table__row-link table__row-removelink remove_row">
+                        <div class="table__wrap table__wrap_sa center">
+                            <div class="table__col table__col_nomw">
+                                <span class="table__col-span-superbig text__bold">Удалить</span>
                             </div>
                         </div>
                     </a>
