--- a/dentko/index.html
+++ b/dentko/index.html
@@ -468,7 +468,7 @@
         <section class="more">
             <div class="uk-container">
                 <div class="uk-flex uk-flex-between uk-flex-middle">
-                    <h2 class="uk-h2">Это интересно"</h2>
+                    <h2 class="uk-h2">Это интересно</h2>
                     <a href="#" class="uk-link green-link">Все статьи</a>
                 </div>
                 <div class="uk-flex uk-flex-between uk-child-width-1-4">
